crates/ruff_python_parser/src/snapshots/ruff_python_parser__invalid__tests__ok_assignment_expr.snap
---
source: crates/ruff_python_parser/src/invalid.rs
expression: ast
---
Ok(
    [
        Expr(
            StmtExpr {
                range: 0..8,
                value: Named(
                    ExprNamed {
                        range: 1..7,
                        target: Name(
                            ExprName {
                                range: 1..2,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                range: 6..7,
                                value: Int(
                                    5,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
)
