crates/ruff_python_parser/src/snapshots/ruff_python_parser__invalid__tests__ok_ipy_escape_command.snap
---
source: crates/ruff_python_parser/src/invalid.rs
expression: ast
---
Ok(
    Module(
        ModModule {
            range: 0..9,
            body: [
                IpyEscapeCommand(
                    StmtIpyEscapeCommand {
                        range: 0..9,
                        kind: Shell,
                        value: "foo = 42",
                    },
                ),
            ],
        },
    ),
)
