crates/ruff_python_parser/src/snapshots/ruff_python_parser__invalid__tests__ok_starred.snap
---
source: crates/ruff_python_parser/src/invalid.rs
expression: ast
---
Ok(
    [
        Assign(
            StmtAssign {
                range: 0..9,
                targets: [
                    Starred(
                        ExprStarred {
                            range: 0..4,
                            value: Name(
                                ExprName {
                                    range: 1..4,
                                    id: "foo",
                                    ctx: Store,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    ExprNumberLiteral {
                        range: 7..9,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
)
